--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "rn-sprite-sheet": "^1.1.12",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
