--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/_layout.js", "app/index.js"  ]
+, "app/_layout.js", "app/index.js", "app/(active)/home.js"  ]
 }
