--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "rn-sprite-sheet": "^1.1.12",
+    "styled-components": "^6.1.18",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
