--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "rn-sprite-sheet": "^1.1.12"
+    "rn-sprite-sheet": "^1.1.12",
+    "@react-native-picker/picker": "2.11.0",
+    "expo-calendar": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
