--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
+    "expo-calendar": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -34,6 +36,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-big-calendar": "^4.18.3",
     "react-native-calendars": "^1.1312.0",
     "react-native-full-responsive": "^2.4.1",
     "react-native-gesture-handler": "~2.24.0",
@@ -45,8 +48,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "rn-sprite-sheet": "^1.1.12",
-    "@react-native-picker/picker": "2.11.0",
-    "expo-calendar": "~14.1.4"
+    "@react-native-community/datetimepicker": "8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
